additional modelbinder tests

--- a/sandbox/templates/simpleView.html
+++ b/sandbox/templates/simpleView.html
@@ -1,4 +1,8 @@
 <input name="firstName" value="<%= firstName %>" /><br>
 <input name="lastName" value="<%= lastName %>" /><br>
 <input name="middleName" value="<%= middleName %>" /><br>
+<input type="radio" name="education" value="high school" /><br>
+<input type="radio" name="education" value="college" /><br>
+<input type="radio" name="education" value="post grad" /><br>
+
 
